--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "1.0.0",
   "description": "node app ",
   "main": "app.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "init": "^0.1.2",
+    "mongodb": "^3.3.0-beta2"
+  },
+  "devDependencies": {},
   "scripts": {
-  "start": "node app.js"
-},
+    "test": "test"
+  },
   "repository": {
-  "type": "git",
-  "url": ""
-},
+    "type": "git",
+    "url": ""
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
-  "url": ""
-},
+    "url": ""
+  },
   "homepage": ""
 }
